composition mobile fix

--- a/css/index.css
+++ b/css/index.css
@@ -529,7 +529,7 @@ body {
 .about .about-composition {
   position: relative;
   padding: 200px 0;
-  margin: 50px 2% 0px;
+  margin: 90px 2% 0px;
 }
 .about .about-composition .composition-photo {
   width: 65%;
@@ -554,7 +554,7 @@ body {
   }
   .about .about-composition {
     position: relative;
-    margin-right: 8%;
+    margin: 50px 8% 0px 2%;
   }
   .about .about-composition .composition-photo {
     width: 65%;
