--- a/less/home-page.less
+++ b/less/home-page.less
@@ -59,7 +59,7 @@
   .about-composition {
     position: relative;
     padding: 200px 0;
-    margin: 50px 2% 0px;
+    margin: 90px 2% 0px;
 
     .composition-photo {
       width: 65%;
@@ -88,7 +88,7 @@
 
     .about-composition {
       position: relative;
-      margin-right: 8%;
+      margin: 50px 8% 0px 2%;
 
       .composition-photo {
         width: 65%;
